# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

* baselayout-1.12.9 (17 Jan 2006)

    Misc fixes and compatible with baselayout-1.13.0_alpha12.

* baselayout-1.12.8 (12 Dec 2006)

  18 Dec 2006; Roy Marples <uberlord@gentoo.org>:
  
    Reverted patch for #104869 as it's silly. Fixes #158174.

    Match wireless encryption key reported against *, #158319 thanks to
    Robert Wolf.

    Replace tac with sed '1!G;h;$!d' as tac is in /usr, #158312.

    Stop providing the NVdriver alias, #158099.

    Fix routes and lo correctly, #157965.

* baselayout-1.12.7 (12 Dec 2006)

  12 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Assume all routes are host routes unless we have a valid netmask,
    #157418 thanks to Alexander Zubkov.

    sysvinit now provides shutdown.sh and reboot.sh, #112991.

  06 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Fix dhcp client variables, as pointed out by John Major.

  05 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Obey the pppd noauth option, #104869 thanks to Bram Verweij.

* baselayout-1.12.6 (02 Nov 2006)

  02 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    We no longer unmount ramfs in halt.sh, #151128
    We no longer use =~ for the 1.12 branch only as we should work on all
    bash versions, #151108

  01 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Clarified pppd maxfail usage, #153657 thanks to Toralf Förster.

  31 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap should come before bridge, #150520.

  30 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning about clamping MSS when running ppp on a router, #149525
    thanks to Alin Nastac.

    Punted DISPLAYMANAGER from /etc/rc.conf as it's now in /etc/conf.d/xdm

  26 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Don't wait for scheduled services to restart when a service is
    started in the background as this may tie up the calling daemon, #148700.
