@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  25 Jul 2007; Roy Marples <uberlord@gentoo.org>:
+
+   Patch runscript.sh to allow for --quiet status, #186459
+   thanks to Jan Kundrát.
+
 * baselayout-1.12.9 (17 Jan 2006)
 
     Misc fixes and compatible with baselayout-1.13.0_alpha12.
